RESOLVED FIXED 250669
Stream IPC message send tests do not test with small connection buffer sizes
https://bugs.webkit.org/show_bug.cgi?id=250669
Summary Stream IPC message send tests do not test with small connection buffer sizes
Kimmo Kinnunen
Reported 2023-01-16 02:38:18 PST
Stream IPC message send tests do not test with small connection buffer sizes It would be useful to test the connection wrap-around case.
Attachments
Radar WebKit Bug Importer
Comment 1 2023-01-16 02:39:37 PST
Kimmo Kinnunen
Comment 2 2023-01-16 02:44:20 PST
EWS
Comment 3 2023-01-16 06:14:56 PST
Committed 258950@main (5d1eb8359a73): <https://commits.webkit.org/258950@main> Reviewed commits have been landed. Closing PR #8684 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.