Stream IPC message send tests do not test with small connection buffer sizes https://bugs.webkit.org/show_bug.cgi?id=250669 rdar://104294217

Reviewed by Antti Koivisto.

Separate the message send tests to a new test fixture and
parametrize that with connection buffer size. Instantiate
with 128, 256, 512, 16k sizes. With the smallest buffers,
the buffer will wrap around so the tests exercise that
part of the implementation.

Fix a bug that affected the tests only, where unopened
StreamServerConnection would assert on invalidate().
Add a test for the case.

* Source/WebKit/Platform/IPC/StreamServerConnection.cpp:
(IPC::StreamServerConnection::open):
(IPC::StreamServerConnection::invalidate):
* Source/WebKit/Platform/IPC/StreamServerConnection.h:
* Tools/TestWebKitAPI/Tests/IPC/StreamConnectionTests.cpp:
(TestWebKitAPI::StreamConnectionTestBase::setupBase):
(TestWebKitAPI::StreamConnectionTestBase::teardownBase):
(TestWebKitAPI::StreamConnectionTestBase::localReferenceBarrier):
(TestWebKitAPI::TEST_F):
(TestWebKitAPI::StreamMessageTest::bufferSizeLog2 const):
(TestWebKitAPI::StreamMessageTest::defaultDestinationID):
(TestWebKitAPI::TEST_P):
(TestWebKitAPI::StreamConnectionTest::localReferenceBarrier): Deleted.
(TestWebKitAPI::StreamConnectionTest::serverQueue): Deleted.

Canonical link: https://commits.webkit.org/258950@main